# FJAST

./: .gitignore  CMakeLists.txt  Makefile
example/: CMakeLists.txt  Main.cpp
example/res/: test1.js
examples/test/: Main.cpp
examples/test/res/: test1.js
include/fjastp/: ASTGenerator.h  Logger.h  Node.h  SegmentedPool.h  SemanticAnalyzer.h  Token.h  Tokenizer.h  fjastp.h  pch.h
include/fjastp/Memory/: SegmentedPool.h
src/: ASTGenerator.cpp  FJASTP.cpp  Node.cpp  SemanticAnalyzer.cpp  Token.cpp  Tokenizer.cpp
