cmake_minimum_required(VERSION 3.12)

add_executable(FJASTPExample Main.cpp)
target_link_libraries(FJASTPExample PRIVATE FJASTP)
target_include_directories(FJASTPExample PUBLIC ${CMAKE_SOURCE_DIR}/libs/HBuffer/include/)
target_include_directories(FJASTPExample PUBLIC ${CMAKE_SOURCE_DIR}/include/)

#Output Directories
if(CMAKE_BUILD_TYPE)
    set(BUILD_TYPE ${CMAKE_BUILD_TYPE}) # For Make, Ninja
else()
    set(BUILD_TYPE $<CONFIG>) # For Visual Studio, Xcode
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_PROJECT_NAME}/${TARGET_ARCH}-${BUILD_TYPE}) #Output Directories
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_PROJECT_NAME}/${TARGET_ARCH}-${BUILD_TYPE}) #Output Directories
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${CMAKE_PROJECT_NAME}/${TARGET_ARCH}-${BUILD_TYPE}) #Output Directories

foreach(OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES})
    string(TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG)
    set_target_properties(FJASTPExample PROPERTIES
        RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
        LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
        ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
    )
endforeach()

set_target_properties(FJASTPExample PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}
    LIBRARY_OUTPUT_DIRECTORY ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}
    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}
)
#Run the program
add_custom_target(run
    COMMAND $<TARGET_FILE:FJASTPExample>
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    DEPENDS FJASTPExample
)